--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Secrets",
+  "name": "Admin",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,7 +9,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "mongoose": "^5.4.5",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.14",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
